Closed Bug 1737352 Opened 3 years ago Closed 3 years ago

New tabs on dark mode appear with white background

Categories

(Firefox :: Tabbed Browser, defect)

Firefox 95
defect

Tracking

()

VERIFIED FIXED
95 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox93 --- unaffected
firefox94 --- unaffected
firefox95 --- verified

People

(Reporter: lisamiller9891, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:95.0) Gecko/20100101 Firefox/95.0

Steps to reproduce:

Open new tab.

Expected results:

Up until a few weeks ago, new tabs in dark mode appeared with a dark background.
Since around a week ago or so new tabs in dark mode appear with a white background.

The Bugbug bot thinks this bug should belong to the 'Firefox::Tabbed Browser' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: Untriaged → Tabbed Browser

I can't reproduce this issue on macOS Big Sur 11.6 using the latest Nightly 95.0a1 or Firefox 93.0.

L, can you confirm whether you reproduce this issue using Firefox in safe mode or with a new profile?
http://support.mozilla.org/en-US/kb/troubleshoot-firefox-issues-using-safe-mode
http://support.mozilla.org/en-US/kb/profile-manager-create-and-remove-firefox-profiles

Also, could you give more details about the Firefox themes (Open Application Menu -> Add-ons and themes) that you are using and the Appearance that is enabled in System Preferences -> General.

Flags: needinfo?(lisamiller9891)

(In reply to Simona Badau from comment #2)

I can't reproduce this issue on macOS Big Sur 11.6 using the latest Nightly 95.0a1 or Firefox 93.0.

L, can you confirm whether you reproduce this issue using Firefox in safe mode or with a new profile?
http://support.mozilla.org/en-US/kb/troubleshoot-firefox-issues-using-safe-mode
http://support.mozilla.org/en-US/kb/profile-manager-create-and-remove-firefox-profiles

Also, could you give more details about the Firefox themes (Open Application Menu -> Add-ons and themes) that you are using and the Appearance that is enabled in System Preferences -> General.

I am using Dark theme, not system.
Troubleshoot mode still shows the problem: New tabs flash black for half a second, then remain plain white.
Just updated to the latest nightly of the day, still same.

Flags: needinfo?(lisamiller9891)
Attached image general appearance.png

I managed to reproduce this on the latest Nightly 95.0a1 and macOS Big Sur 11.6. The issue is reproducible when the "New Tabs " from about:preferences#home are set to start with a "Blank Page" and Firefox has the dark theme enabled.

Narrowed regression window to:
Last good revision: deed5a3e46628648a3e1a77ddd23fbd52c52a5a3
First bad revision: cfd460e7f462dfb1930b3bd57078b1b2f62717fc
Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=deed5a3e46628648a3e1a77ddd23fbd52c52a5a3&tochange=cfd460e7f462dfb1930b3bd57078b1b2f62717fc

Severity: -- → S3
Status: UNCONFIRMED → NEW
Has Regression Range: --- → yes
Ever confirmed: true
Regressed by: 1736038
Flags: needinfo?(emilio)

This makes me think that pre-10.13 macOS is the only platform without dark
system colors...

We might want to do something like D127645 for pre-10.14 macs?

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Flags: needinfo?(emilio)
QA Whiteboard: [qa-regression-triage]

The regression window was provided in Comment 5, removing the QA whiteboard [qa-regression-triage].

QA Whiteboard: [qa-regression-triage]
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e8db463fdd78
Make some more system colors respect the requested color-scheme on macOS. r=mac-reviewers,harry
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch

I can confirm that the New tabs on dark mode do not have a white background anymore - verified with the latest Nightly 95.0a1 on macOS Big Sur 11.6.

But, the background color of the new tab on Nightly 95 is different than on Firefox 93 - please see the screenshot. Emilio, is this expected?

Flags: needinfo?(emilio)

Yeah, it's expected for now, the color to the right is a system color. It'll change back to what it was in FF93 in bug 1525107, but it's not a huge deal either way.

Flags: needinfo?(emilio)

(In reply to Emilio Cobos Álvarez (:emilio) from comment #11)

Yeah, it's expected for now, the color to the right is a system color. It'll change back to what it was in FF93 in bug 1525107, but it's not a huge deal either way.

Ok, Thanks, Emilio!

Based on this, setting the status for Fx 95 to Verified Fixed.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: