Bug 1737352 - Make some more system colors respect the requested color-scheme on macOS. r=mac-reviewers,harry

This makes me think that pre-10.13 macOS is the only platform without dark
system colors...

We might want to do something like D127645 for pre-10.14 macs?

Differential Revision: https://phabricator.services.mozilla.com/D129575